feat(#31): operational efficiency — lazy reconstruction for service lifecycle
OperationalDimension gains per-dimension ReadWriteLock, CopyOnWriteArrayList,
and load() for lazy reconstruction from engine context after restart.
DimensionType gains resolveStatus() and defaultStatus(). ServiceCaseContext
gains createForReconstruction() factory. DimensionStatusService persists
composite status to engine context. ServiceCaseRegistry gains
getOrReconstruct() with metadata persistence and serviceId index.
ServiceDetectionBridge gains load-on-demand and activeResponseIds persistence.

Closes #31

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>